--- a/med.html
+++ b/med.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <title></title>
 </head>
 <body>
-
 </body>
 </html>
