--- a/med.html
+++ b/med.html
@@ -6,7 +6,43 @@
     <title>Densaulyq</title>
 </head>
 <body>
-<h1>Heading</h1>
-<p>paragraph.</p>
+
+<header>
+    <h1>Densauluq</h1>
+    <h2>Medical Organization in Kazakhstan</h2>
+    <p>Providing high-quality healthcare services for the people of Kazakhstan.</p>
+</header>
+
+<section>
+    <h2>About Us</h2>
+    <p>bluh bluh че написать</p>
+</section>
+
+<section>
+    <h2>Our Services</h2>
+    <ul>
+        <li>General Health Checkups</li>
+        <li>Pediatrics</li>
+        <li>Cardiology</li>
+        <li>Orthopedics</li>
+        <li>Emergency Care</li>
+        <li>Maternity Services</li>
+        <li>Laboratory Testing</li>
+        <li>Pharmacy Services</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Contact Us</h2>
+    <p>Address: 123 Kabanbai Batyr st., Astana, Kazakhstan</p>
+    <p>Phone: тут номер</p>
+    <p>Email: info@densauluq.kz</p>
+</section>
+
+<footer>
+    <p>2024 Densauluq. Kuanysh Aitzhanov.</p>
+</footer>
+
 </body>
+
 </html>
