--- a/med.html
+++ b/med.html
@@ -13,6 +13,19 @@
     <p>Providing high-quality healthcare services for the people of Kazakhstan.</p>
 </header>
 
+<nav>
+    <ul>
+        <li><a href="reg.html">Log in/Sign up</a></li>
+        <li><a href="appointment.html">Make an appointment</a></li>
+        <li><a href="health_analysis.html">Tests and your health</a></li>
+        <li><a href="personal_account.html">Personal account</a></li>
+        <li><a href="diseases.html">About diseases</a></li>
+        <li><a href="doctors_db.html">Doctors' database</a></li>
+        <li><a href="recommendations.html">General recommendations</a></li>
+        <li><a href="funding.html">Financing</a></li>
+    </ul>
+</nav>
+
 <section>
     <h2>About Us</h2>
     <p>bluh bluh че написать</p>
