personal acc new info

--- a/personal_account.html
+++ b/personal_account.html
@@ -26,6 +26,42 @@
   </ul>
 </nav>
 
+<section>
+  <h2>Your Information</h2>
+  <p><strong>Name:</strong>Kuanysh</p>
+  <p><strong>Surname:</strong>Aitzhanov</p>
+  <p><strong>IIN:</strong>222222222222</p>
+  <p><strong>Gender:</strong>Male</p>
+  <p><strong>Place of Residence:</strong>Pushkin st. 12</p>
+  <p><strong>Hospital Registration:</strong>Mediker</p>
+  <p><strong>Date of Birth:</strong> 22.12.2005</p>
+  <p><strong>Email:</strong> kuka@gmail.com</p>
+  <p><strong>Phone:</strong> 12323</p>
+</section>
+
+<section>
+  <h2>Your Appointments</h2>
+  <p>No upcoming appointments.</p>
+  <p><a href="appointment.html">Schedule a new appointment</a></p>
+</section>
+
+<section>
+  <h2>Your Test Results</h2>
+  <p>No test results available.</p>
+  <p><a href="health_analysis.html">View more details</a></p>
+</section>
+
+<section>
+  <h2>Contact Your Doctor</h2>
+  <p><strong>Doctor's Name:</strong> Dr. Aibolit</p>
+  <p><strong>Email:</strong> doctor@gmail.com</p>
+  <p><strong>Phone:</strong> 1111</p>
+</section>
+
+<footer>
+  <p>2024 Densauluq. Kuanysh Aitzhanov.</p>
+</footer>
+
 </body>
 
 </html>
