--- a/home_page.html
+++ b/home_page.html
@@ -21,7 +21,7 @@
         <li><a href="personal_account.html">Personal Account</a></li>
         <li><a href="diseases.html">About Diseases</a></li>
         <li><a href="doctors_db.html">Doctors' Database</a></li>
-        <li><a href="recommendations.html">General Recommendations</a></li>
+        <li><a href="recommend.html">General Recommendations</a></li>
         <li><a href="funding.html">Financing</a></li>
     </ul>
 </nav>
