aboutus probably temporaly and phones

--- a/home_page.html
+++ b/home_page.html
@@ -28,7 +28,13 @@
 
 <section>
     <h2>About Us</h2>
-    <p>bluh bluh че написать</p>
+    <p>
+        Densauluq is a leading medical organization in Kazakhstan dedicated to providing high-quality healthcare
+        services to the people of our nation. Our mission is to ensure that every
+        individual has access to comprehensive, compassionate, and affordable healthcare.
+        We believe in the importance of preventative care, early diagnosis,
+        and effective treatment to improve the overall health and well-being of our community.
+    </p>
 </section>
 
 <section>
@@ -48,7 +54,7 @@
 <section>
     <h2>Contact Us</h2>
     <p>Address: 123 Kabanbai Batyr st., Astana, Kazakhstan</p>
-    <p>Phone: тут номер</p>
+    <p>Phone: +7 (777) 123 1234</p>
     <p>Email: info@densauluq.kz</p>
 </section>
 
