--- a/personal_account.html
+++ b/personal_account.html
@@ -30,7 +30,7 @@
   <h2>Your Information</h2>
   <p><strong>Name:</strong>Kuanysh</p>
   <p><strong>Surname:</strong>Aitzhanov</p>
-  <p><strong>IIN:</strong>222222222222</p>
+  <p><strong>IIN:</strong>+7 (777) 789 7890</p>
   <p><strong>Gender:</strong>Male</p>
   <p><strong>Place of Residence:</strong>Pushkin st. 12</p>
   <p><strong>Hospital Registration:</strong>Mediker</p>
@@ -55,7 +55,7 @@
   <h2>Contact Your Doctor</h2>
   <p><strong>Doctor's Name:</strong> Dr. Aibolit</p>
   <p><strong>Email:</strong> doctor@gmail.com</p>
-  <p><strong>Phone:</strong> 1111</p>
+  <p><strong>Phone:</strong> +7 (777) 456 4567</p>
 </section>
 
 <footer>
