--- a/home_page.html
+++ b/home_page.html
@@ -29,7 +29,7 @@
 <section>
     <h2>About Us</h2>
     <p>
-        Densauluq is a leading medical organization in Kazakhstan dedicated to providing high-quality healthcare
+        Densauluq is a medical organization in Kazakhstan dedicated to providing high-quality healthcare
         services to the people of our nation. Our mission is to ensure that every
         individual has access to comprehensive, compassionate, and affordable healthcare.
         We believe in the importance of preventative care, early diagnosis,
