--- a/registration.html
+++ b/registration.html
@@ -33,5 +33,8 @@
     <input type="password"><br><br>
     <input type="submit" value="Registration">
 </form>
+<footer>
+    Densaulyq - Tanirbergen Gaziza
+</footer>
 </body>
 </html>
