--- a/registration.html
+++ b/registration.html
@@ -34,7 +34,7 @@
     <input type="submit" value="Registration">
 </form>
 <footer>
-    Densaulyq - Tanirbergen Gaziza
+    <p>2024 Densauluq. Gaziza Tanirbergen.</p>
 </footer>
 </body>
 </html>
