--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,22 @@
     <title>Log in/Sign in - Densauluq</title>
 </head>
 <body>
-<h1>Log in</h1>
+<header>
+    <h1>Account on Densaulyq?</h1>
+</header>
+<nav>
+    <ul>
+        <li><a href="home_page.html">Main</a></li>
+        <li><a href="appointment.html">Make an Appointment</a></li>
+        <li><a href="analysis.html">Tests and Your Health</a></li>
+        <li><a href="personal_account.html">Personal Account</a></li>
+        <li><a href="diseases.html">About Diseases</a></li>
+        <li><a href="doctors_db.html">Doctors' Database</a></li>
+        <li><a href="recommend.html">General Recommendations</a></li>
+        <li><a href="funding.html">Financing</a></li>
+    </ul>
+</nav>
+<h1>Already in? Log in!</h1>
 <form action="personal_account.html" method="get">
     <label>email</label><br>
     <input type="email"><br>
