--- a/appointment.html
+++ b/appointment.html
@@ -5,6 +5,68 @@
     <title>Appointment - Densaulyq</title>
 </head>
 <body>
-<h1>Health analysis</h1>
+<header>
+    <h1>Appointments</h1>
+    <h3>Choose from list please</h3>
+    <p>You can choose any centers, any specialists and even any time.</p>
+</header>
+
+<nav>
+    <ul>
+        <li><a href="home_page.html">Return to home page</a></li>
+        <li><a href="registration.html">Log out</a></li>
+        <li><a href="personal_account.html">Personal Account</a></li>
+        <li><a href="analysis.html">View test results</a></li>
+        <li><a href="diseases.html">About diseases</a></li>
+        <li><a href="doctors_db.html">Doctors' database</a></li>
+        <li><a href="recommend.html">General recommendations</a></li>
+        <li><a href="funding.html">Financing</a></li>
+    </ul>
+</nav>
+<img src="коронавирус.png" alt="Коронавирус" height="200px" width="200px"><br>
+<figcaption>Illustration by Tanirbergen Gaziza</figcaption><br>
+<br>
+<a>Discounts for coronavirus diagnostics.</a><br>
+<br>
+<br>
+<form action="personal_account.html" method="get">
+<a>Choose the illness.</a><br>
+<select>
+    <option>Coronavirus</option>
+    <option>Monkeypox</option>
+    <option>SARS</option>
+    <option>Temperature above 38C</option>
+    <option>Heart disease</option>
+</select>
+<br>
+<br>
+<a>Choose the doctor.</a><br>
+<select>
+    <option>Sembayev N.</option>
+    <option>Seralinov A.</option>
+    <option>Aitzhanov K.</option>
+    <option>Smatulla L.</option>
+</select>
+<br>
+<br>
+<a>Reason of the visit.</a><br>
+<textarea></textarea><br>
+<br>
+<br>
+<a>Choose the date.</a><br>
+<input type="date"><br>
+<br>
+<br>
+<a>Choose the time.</a><br>
+<input type="time"><br>
+<br>
+<br>
+<input type="submit" value="Register">
+<br>
+<br>
+</form>
+<footer>
+    <p>2024 Densauluq. Gaziza Tanirbergen.</p>
+</footer>
 </body>
 </html>
