--- a/personal_account.html
+++ b/personal_account.html
@@ -16,9 +16,9 @@
 <nav>
   <ul>
     <li><a href="home_page.html">Return to home page</a></li>
-    <li><a href="reg.html">Log out</a></li>
+    <li><a href="registration.html">Log out</a></li>
     <li><a href="appointment.html">Make an appointment</a></li>
-    <li><a href="health_analysis.html">View test results</a></li>
+    <li><a href="analysis.html">View test results</a></li>
     <li><a href="diseases.html">About diseases</a></li>
     <li><a href="doctors_db.html">Doctors' database</a></li>
     <li><a href="recommend.html">General recommendations</a></li>
