--- a/analysis.html
+++ b/analysis.html
@@ -10,5 +10,37 @@
     <h3>Choose from list please</h3>
     <p>Manage your personal information, appointments, and more.</p>
 </header>
+<nav>
+    <ul>
+        <li><a href="home_page.html">Return to home page</a></li>
+        <li><a href="registration.html">Log out</a></li>
+        <li><a href="appointment.html">Make an appointment</a></li>
+        <li><a href="personal_account.html">Personal Account</a></li>
+        <li><a href="diseases.html">About diseases</a></li>
+        <li><a href="doctors_db.html">Doctors' database</a></li>
+        <li><a href="recommend.html">General recommendations</a></li>
+        <li><a href="funding.html">Financing</a></li>
+    </ul>
+</nav>
+<details>
+    <summary>Your results of the most recent analysis</summary>
+    Heartbeat per a second is 120 beats.
+    Iron in blood is low.
+</details>
+<br>
+<br>
+<a>Choose the date of visiting.</a><br>
+<input type="date"><br>
+<br>
+<br>
+<details>
+    <summary>Your results of the most recent analysis</summary>
+    Heartbeat per a second is 120 beats.
+    Iron in blood is low.
+
+</details>
+<footer>
+    <p>2024 Densauluq. Gaziza Tanirbergen.</p>
+</footer>
 </body>
 </html>
