--- a/home_page.html
+++ b/home_page.html
@@ -15,9 +15,9 @@
 
 <nav>
     <ul>
-        <li><a href="reg.html">Log in/Sign up</a></li>
+        <li><a href="registration.html">Log in/Sign up</a></li>
         <li><a href="appointment.html">Make an Appointment</a></li>
-        <li><a href="health_analysis.html">Tests and Your Health</a></li>
+        <li><a href="analysis.html">Tests and Your Health</a></li>
         <li><a href="personal_account.html">Personal Account</a></li>
         <li><a href="diseases.html">About Diseases</a></li>
         <li><a href="doctors_db.html">Doctors' Database</a></li>
