--- a/recommend.html
+++ b/recommend.html
@@ -16,12 +16,12 @@
 <nav>
   <ul>
     <li><a href="home_page.html">Return to home page</a></li>
-    <li><a href="reg.html">Log in/Sign up</a></li>
+    <li><a href="registration.html">Log out</a></li>
     <li><a href="appointment.html">Make an appointment</a></li>
-    <li><a href="health_analysis.html">Tests and your health</a></li>
-    <li><a href="personal_account.html">Personal account</a></li>
+    <li><a href="analysis.html">View test results</a></li>
     <li><a href="diseases.html">About diseases</a></li>
     <li><a href="doctors_db.html">Doctors' database</a></li>
+    <li><a href="personal_account.html">Personal Account</a></li>
     <li><a href="funding.html">Financing</a></li>
   </ul>
 </nav>
