--- a/personal_account.html
+++ b/personal_account.html
@@ -30,13 +30,13 @@
   <h2>Your Information</h2>
   <p><strong>Name:</strong>Kuanysh</p>
   <p><strong>Surname:</strong>Aitzhanov</p>
-  <p><strong>IIN:</strong>+7 (777) 789 7890</p>
+  <p><strong>IIN:</strong>22222222222222</p>
   <p><strong>Gender:</strong>Male</p>
   <p><strong>Place of Residence:</strong>Pushkin st. 12</p>
   <p><strong>Hospital Registration:</strong>Mediker</p>
   <p><strong>Date of Birth:</strong> 22.12.2005</p>
   <p><strong>Email:</strong> kuka@gmail.com</p>
-  <p><strong>Phone:</strong> 12323</p>
+  <p><strong>Phone:</strong> +7 (777) 789 7890</p>
 </section>
 
 <section>
