--- a/home_page.html
+++ b/home_page.html
@@ -8,10 +8,14 @@
 <body>
 
 <header>
-    <h1>Densauluq</h1>
-    <h2>Medical Organization in Kazakhstan</h2>
+    <img src="img/logo.png" alt="Densauluq Logo" style="height: 80px; width: auto;">
+    <img src="img/img.png" alt="Densauluq Name" style="height: 50px; width: auto;">
+    <hr>
+    <h1>Medical Organization in Kazakhstan</h1>
     <p>Providing high-quality healthcare services for the people of Kazakhstan.</p>
 </header>
+
+<hr>
 
 <nav>
     <ul>
@@ -26,6 +30,8 @@
     </ul>
 </nav>
 
+<hr>
+
 <section>
     <h2>About Us</h2>
     <p>
@@ -36,6 +42,8 @@
         and effective treatment to improve the overall health and well-being of our community.
     </p>
 </section>
+
+<hr>
 
 <section>
     <h2>Our Services</h2>
@@ -51,17 +59,21 @@
     </ul>
 </section>
 
+<hr>
+
 <section>
     <h2>Contact Us</h2>
-    <p>Address: 123 Kabanbai Batyr st., Astana, Kazakhstan</p>
-    <p>Phone: +7 (777) 123 1234</p>
-    <p>Email: info@densauluq.kz</p>
+    <p><strong>Address:</strong> 123 Kabanbai Batyr st., Astana, Kazakhstan</p>
+    <p><strong>Phone:</strong> +7 (777) 123 1234</p>
+    <p><strong>Email:</strong> info@densauluq.kz</p>
 </section>
 
 <footer>
     <p>2024 Densauluq. Kuanysh Aitzhanov.</p>
 </footer>
 
-</body>
+<hr>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d320668.45270979754!2d71.50158234999999!3d51.1043588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x424585a605525605%3A0x4dff4a1973f7567e!2sAstana%20IT%20University!5e0!3m2!1sru!2skz!4v1725451090787!5m2!1sru!2skz" width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+</body>
 </html>
