--- a/doctors.html
+++ b/doctors.html
@@ -8,8 +8,20 @@
 
 <body>
 
-<h1>Our doctors</h1>
+<h1>Our specialists</h1>
 <p>We are pleased to introduce you to our team of medical specialists!</p>
 
+<nav>
+    <ul>
+        <li><a href="home_page.html">Return to home page</a></li>
+        <li><a href="registration.html">Log out</a></li>
+        <li><a href="personal_account.html">Personal Account</a></li>
+        <li><a href="analysis.html">View test results</a></li>
+        <li><a href="diseases.html">About diseases</a></li>
+        <li><a href="doctors_db.html">Doctors' database</a></li>
+        <li><a href="recommend.html">General recommendations</a></li>
+        <li><a href="funding.html">Financing</a></li>
+    </ul>
+</nav>
 
 </body>
