--- a/doctors.html
+++ b/doctors.html
@@ -24,6 +24,47 @@
     </ul>
 </nav>
 
+<section>
+    <h2>Doctor Profiles</h2>
+    <table border="1" cellpadding="10">
+        <thead>
+        <tr>
+            <th>Photo</th>
+            <th>Name</th>
+            <th>Specialization</th>
+            <th>Contact</th>
+            <th>Available Days</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><img src="photo_2024-09-06 13.16.14.jpeg" width="100" height="100"></td>
+            <td>Dr. Liana Smatulla</td>
+            <td>Cardiologist</td>
+            <td>liana.smat@densauluq.com</td>
+            <td>Monday, Wednesday, Friday</td>
+        </tr>
+        <tr>
+            <td><img src="photo_2024-09-06 13.16.17.jpeg"  width="100" height="100"></td>
+            <td>Dr. Kuanysh Aitzhanov </td>
+            <td>Dermatologist</td>
+            <td>kuan.ait@deunsauluq.com</td>
+            <td>Tuesday, Thursday</td>
+        </tr>
+        <tr>
+            <td><img src="photo_2024-09-06 13.16.14.jpeg" width="100" height="100"></td>
+            <td>Dr. Gaziza Tanirbergen</td>
+            <td>Neurologist</td>
+            <td>gaziza.tan@densauluq.com</td>
+            <td>Monday, Thursday, Saturday</td>
+        </tr>
+        </tbody>
+    </table>
+</section>
+
+
+
+
 <footer>
     <p> 2024 Densuluq. Liana Smatulla. </p>
 </footer>
