one change in appointments and diseases page added

--- a/appointment.html
+++ b/appointment.html
@@ -43,7 +43,7 @@
 <a>Choose the doctor.</a><br>
 <select>
     <option>Sembayev N.</option>
-    <option>Seralinov A.</option>
+    <option>Tanirbegren G.</option>
     <option>Aitzhanov K.</option>
     <option>Smatulla L.</option>
 </select>
