--- a/diseases.html
+++ b/diseases.html
@@ -8,3 +8,48 @@
 <body>
 <header>
     <h1>About Diseases</h1>
+    <p>On this page you can read about common diseases and learn their symptoms.</p>
+
+    <style>
+        img {
+            float: left;
+            margin-right: 25px;
+        }
+
+        article {
+            clear: both; /* Ensures articles don't overlap */
+            overflow: auto; /* Keeps layout intact */
+        }
+    </style>
+    </head>
+</header>
+
+<nav>
+    <ul>
+        <li><a href="registration.html">Log in/Sign up</a></li>
+        <li><a href="appointment.html">Make an Appointment</a></li>
+        <li><a href="analysis.html">Tests and Your Health</a></li>
+        <li><a href="personal_account.html">Personal Account</a></li>
+        <li><a href="diseases.html">About Diseases</a></li>
+        <li><a href="doctors.html">Doctors' Database</a></li>
+        <li><a href="recommend.html">General Recommendations</a></li>
+        <li><a href="funding.html">Financing</a></li>
+    </ul>
+</nav>
+
+<section>
+    <h2>Diseases</h2>
+        <h3>Severe Acute Respiratory Syndrome (SARS)</h3>
+        <img src="sars virus.jpg" alt="SARS Virus" width="200" height="200">
+        <p>SARS (Severe Acute Respiratory Syndrome) is a viral respiratory illness caused by the SARS-associated coronavirus (SARS-CoV). It was first identified in 2002 in southern China and led to a global outbreak in 2003. SARS primarily spreads through respiratory droplets when an infected person coughs or sneezes.
+
+           <ul> Symptoms of SARS:
+            <li>High fever (above 38°C)</li>
+            <li>Chills and body aches</li>
+            <li>Dry cough</li>
+            <li>Shortness of breath or difficulty breathing</li>
+            <li>Fatigue</li>
+            <li>Diarrhea (in some cases)</li> </ul>
+            In severe cases, SARS can progress to pneumonia, which can be life-threatening. The outbreak was contained by 2004.
+
+</section>
