--- a/appointment.html
+++ b/appointment.html
@@ -18,7 +18,7 @@
         <li><a href="personal_account.html">Personal Account</a></li>
         <li><a href="analysis.html">View test results</a></li>
         <li><a href="diseases.html">About diseases</a></li>
-        <li><a href="doctors_db.html">Doctors' database</a></li>
+        <li><a href="doctors.html">Doctors' database</a></li>
         <li><a href="recommend.html">General recommendations</a></li>
         <li><a href="funding.html">Financing</a></li>
     </ul>
