--- a/diseases.html
+++ b/diseases.html
@@ -17,8 +17,8 @@
         }
 
         article {
-            clear: both; /* Ensures articles don't overlap */
-            overflow: auto; /* Keeps layout intact */
+            clear: both; /
+            overflow: auto;
         }
     </style>
     </head>
@@ -39,7 +39,7 @@
 
 <section>
     <h2>Diseases</h2>
-        <h3>Severe Acute Respiratory Syndrome (SARS)</h3>
+        <h4>Severe Acute Respiratory Syndrome (SARS)</h4>
         <img src="sars virus.jpg" alt="SARS Virus" width="200" height="200">
         <p>SARS (Severe Acute Respiratory Syndrome) is a viral respiratory illness caused by the SARS-associated coronavirus (SARS-CoV). It was first identified in 2002 in southern China and led to a global outbreak in 2003. SARS primarily spreads through respiratory droplets when an infected person coughs or sneezes.
 
@@ -51,5 +51,5 @@
             <li>Fatigue</li>
             <li>Diarrhea (in some cases)</li> </ul>
             In severe cases, SARS can progress to pneumonia, which can be life-threatening. The outbreak was contained by 2004.
-
 </section>
+
