--- a/personal_account.html
+++ b/personal_account.html
@@ -20,7 +20,7 @@
     <li><a href="appointment.html">Make an appointment</a></li>
     <li><a href="analysis.html">View test results</a></li>
     <li><a href="diseases.html">About diseases</a></li>
-    <li><a href="doctors_db.html">Doctors' database</a></li>
+    <li><a href="doctors.html">Doctors' database</a></li>
     <li><a href="recommend.html">General recommendations</a></li>
     <li><a href="funding.html">Financing</a></li>
   </ul>
