--- a/registration.html
+++ b/registration.html
@@ -15,7 +15,7 @@
         <li><a href="analysis.html">Tests and Your Health</a></li>
         <li><a href="personal_account.html">Personal Account</a></li>
         <li><a href="diseases.html">About Diseases</a></li>
-        <li><a href="doctors_db.html">Doctors' Database</a></li>
+        <li><a href="doctors.html">Doctors' Database</a></li>
         <li><a href="recommend.html">General Recommendations</a></li>
         <li><a href="funding.html">Financing</a></li>
     </ul>
