--- a/diseases.html
+++ b/diseases.html
@@ -53,3 +53,9 @@
             In severe cases, SARS can progress to pneumonia, which can be life-threatening. The outbreak was contained by 2004.
 </section>
 
+<footer>
+    <p> 2024 Densuluq. Liana Smatulla. </p>
+</footer>
+
+</body>
+</html>
