--- a/analysis.html
+++ b/analysis.html
@@ -23,9 +23,9 @@
     </ul>
 </nav>
 <details>
-    <summary>Your results of the most recent analysis</summary>
+    <summary>Your results of the most recent analysis
     Heartbeat per a second is 120 beats.
-    Iron in blood is low.
+    Iron in blood is low.</summary>
 </details>
 <br>
 <br>
@@ -33,12 +33,34 @@
 <input type="date"><br>
 <br>
 <br>
-<details>
-    <summary>Your results of the most recent analysis</summary>
-    Heartbeat per a second is 120 beats.
-    Iron in blood is low.
-
-</details>
+<section>
+            <table border="1">
+                <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Analysis name</th>
+                    <th>Results</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>11.09.2001</td>
+                    <td>Traumatology</td>
+                    <td>Broken hand</td>
+                </tr>
+                <tr>
+                    <td>12.06.2020</td>
+                    <td>Coronavirus test</td>
+                    <td>positive</td>
+                </tr>
+                <tr>
+                    <td>05.07.2024</td>
+                    <td>Monkeypox test</td>
+                    <td>positive</td>
+                </tr>
+                </tbody>
+            </table>
+</section>
 <footer>
     <p>2024 Densauluq. Gaziza Tanirbergen.</p>
 </footer>
