--- a/appointment.html
+++ b/appointment.html
@@ -23,14 +23,16 @@
         <li><a href="funding.html">Financing</a></li>
     </ul>
 </nav>
-<img src="коронавирус.png" alt="Коронавирус" height="200px" width="200px"><br>
-<figcaption>Illustration by Tanirbergen Gaziza</figcaption><br>
-<br>
-<a>Discounts for coronavirus diagnostics.</a><br>
-<br>
-<br>
-<form action="personal_account.html" method="get">
-<a>Choose the illness.</a><br>
+<section>
+    <img src="коронавирус.png" alt="Коронавирус" height="200px" width="200px"><br>
+    <figcaption>Illustration by Tanirbergen Gaziza</figcaption><br>
+    <br>
+    <h3>Discounts for coronavirus diagnostics.</h3><br>
+    <br>
+    <br>
+    <form action="personal_account.html" method="get">
+</section>
+<h1>Choose the illness.</h1><br>
 <select>
     <option>Coronavirus</option>
     <option>Monkeypox</option>
