more diseases and pictures some adjustments

--- a/home_page.html
+++ b/home_page.html
@@ -32,6 +32,7 @@
 
 <hr>
 
+<blockquote>“Take care of your body. It’s the only place you have to live.” – Jim Rohn </blockquote>
 <section>
     <h2>About Us</h2>
     <p>
