--- a/diseases.html
+++ b/diseases.html
@@ -3,59 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
-    <title>Densaulyq</title>
+    <title>Densauluq</title>
 </head>
 <body>
 <header>
     <h1>About Diseases</h1>
     <p>On this page you can read about common diseases and learn their symptoms.</p>
 
-    <style>
-        img {
-            float: left;
-            margin-right: 25px;
-        }
+    <!--  <style>
+          img {
+              float: left;
+              margin-right: 25px;
+          }
+          figcaption {
+              float: left;
+              margin-right: 25px;
+          }
+          article {
+              clear: both;
+              overflow: auto;
+          }
+      </style> -->
 
-        article {
-            clear: both; /
-            overflow: auto;
-        }
-    </style>
-    </head>
-</header>
+      </head>
+  </header>
 
-<nav>
-    <ul>
-        <li><a href="registration.html">Log in/Sign up</a></li>
-        <li><a href="appointment.html">Make an Appointment</a></li>
-        <li><a href="analysis.html">Tests and Your Health</a></li>
-        <li><a href="personal_account.html">Personal Account</a></li>
-        <li><a href="diseases.html">About Diseases</a></li>
-        <li><a href="doctors.html">Doctors' Database</a></li>
-        <li><a href="recommend.html">General Recommendations</a></li>
-        <li><a href="funding.html">Financing</a></li>
-    </ul>
-</nav>
+  <nav>
+      <ul>
+          <li><a href="registration.html">Log in/Sign up</a></li>
+          <li><a href="appointment.html">Make an Appointment</a></li>
+          <li><a href="analysis.html">Tests and Your Health</a></li>
+          <li><a href="personal_account.html">Personal Account</a></li>
+          <li><a href="diseases.html">About Diseases</a></li>
+          <li><a href="doctors.html">Doctors' Database</a></li>
+          <li><a href="recommend.html">General Recommendations</a></li>
+          <li><a href="funding.html">Financing</a></li>
+      </ul>
+  </nav>
+
+  <section>
+      <h2>Diseases</h2>
+
+      <article>
+          <h3>Severe Acute Respiratory Syndrome (SARS)</h3>
+
+          <figure>
+              <img src="sars virus.jpg" alt="SARS Virus" width="250" height="250">
+              <figcaption>SARS virus under the microscope</figcaption>
+          </figure>
+
+          <p>
+              SARS (Severe Acute Respiratory Syndrome) is a viral respiratory illness caused by the SARS-associated coronavirus (SARS-CoV). It was first identified in 2002 in southern China and led to a global outbreak in 2003. SARS primarily spreads through respiratory droplets when an infected person coughs or sneezes.
+          </p>
+
+          <p>Symptoms of SARS include:</p>
+          <ul>
+              <li>High fever (above 38°C)</li>
+              <li>Chills and body aches</li>
+              <li>Dry cough</li>
+              <li>Shortness of breath or difficulty breathing</li>
+              <li>Fatigue</li>
+              <li>Diarrhea (in some cases)</li>
+          </ul>
+
+          <p>
+              In severe cases, SARS can progress to pneumonia, which can be life-threatening. The outbreak was contained by 2004.
+          </p>
+      </article>
+  </section>
 
 <section>
-    <h2>Diseases</h2>
-        <h4>Severe Acute Respiratory Syndrome (SARS)</h4>
-        <img src="sars virus.jpg" alt="SARS Virus" width="200" height="200">
-        <p>SARS (Severe Acute Respiratory Syndrome) is a viral respiratory illness caused by the SARS-associated coronavirus (SARS-CoV). It was first identified in 2002 in southern China and led to a global outbreak in 2003. SARS primarily spreads through respiratory droplets when an infected person coughs or sneezes.
+    <article>
+        <h3>Monkeypox</h3>
 
-           <ul> Symptoms of SARS:
-            <li>High fever (above 38°C)</li>
-            <li>Chills and body aches</li>
-            <li>Dry cough</li>
-            <li>Shortness of breath or difficulty breathing</li>
-            <li>Fatigue</li>
-            <li>Diarrhea (in some cases)</li> </ul>
-            In severe cases, SARS can progress to pneumonia, which can be life-threatening. The outbreak was contained by 2004.
+        <figure>
+            <img src="monkeypox.jpg" alt="Monkeypox Virus" width="250" height="250">
+            <figcaption>Monkeypox virus under the microscope</figcaption>
+        </figure>
+
+        <p>
+            Monkeypox is a viral zoonotic disease caused by the monkeypox virus, part of the Orthopoxvirus genus. It was first identified in 1958 in monkeys kept for research, and the first human case was recorded in 1970. The virus can spread from animals to humans and between humans through close contact.
+        </p>
+
+        <p>Symptoms of monkeypox include:</p>
+        <ul>
+            <li>Fever</li>
+            <li>Headache</li>
+            <li>Muscle aches and backache</li>
+            <li>Swollen lymph nodes</li>
+            <li>Chills</li>
+            <li>Exhaustion</li>
+            <li>A rash that often starts on the face and spreads to other parts of the body</li>
+        </ul>
+
+        <p>
+            The rash eventually forms scabs and falls off as part of the healing process. In severe cases, complications like secondary infections or pneumonia can occur. Monkeypox is similar to smallpox, but it is less severe and less contagious.
+        </p>
+
+    </article>
 </section>
+<section>
+    <article>
+<h3>Coronavirus (COVID-19)</h3>
 
-<footer>
-    <p> 2024 Densuluq. Liana Smatulla. </p>
-</footer>
+<figure>
+    <img src="coronavirus.jpg" alt="Coronavirus" width="250" height="250">
+    <figcaption>Coronavirus under the microscope</figcaption>
+</figure>
 
-</body>
-</html>
+<p>
+    Coronavirus disease (COVID-19) is caused by the SARS-CoV-2 virus, a novel coronavirus that was first identified in Wuhan, China, in December 2019. It led to a global pandemic, causing widespread illness and disruptions. COVID-19 primarily spreads through respiratory droplets and can infect individuals through close contact or touching contaminated surfaces.
+</p>
+
+<p>Symptoms of COVID-19 include:</p>
+<ul>
+    <li>Fever or chills</li>
+    <li>Dry cough</li>
+    <li>Shortness of breath or difficulty breathing</li>
+    <li>Fatigue</li>
+    <li>Muscle or body aches</li>
+    <li>Loss of taste or smell</li>
+    <li>Sore throat</li>
+    <li>Headache</li>
+    <li>Congestion or runny nose</li>
+    <li>Nausea or vomiting</li>
+    <li>Diarrhea</li>
+</ul>
+
+<p>
+    While most cases of COVID-19 result in mild to moderate respiratory illness, severe cases can lead to pneumonia, acute respiratory distress syndrome (ARDS), organ failure, or death, particularly in older adults and individuals with underlying health conditions. Vaccines and public health measures have played a key role in controlling the pandemic.
+</p>
+    </article>
+</section>
+  <footer>
+      <p> 2024 Densuluq. Liana Smatulla. </p>
+  </footer>
+
+  </body>
+  </html>
