--- a/doctors.html
+++ b/doctors.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
-    <title>Densaulyq</title>
+    <title>Densauluq</title>
 </head>
 
 <body>
@@ -38,21 +38,21 @@
         </thead>
         <tbody>
         <tr>
-            <td><img src="photo_2024-09-06 13.16.14.jpeg" alt="Dr. Liana" width="100" height="100"></td>
+            <td><img src="photo_2024-09-06 13.16.14.jpeg" alt="Dr. Liana" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
             <td>Dr. Liana Smatulla</td>
             <td>Cardiologist</td>
             <td>liana.smat@densauluq.com</td>
             <td>Monday, Wednesday, Friday</td>
         </tr>
         <tr>
-            <td><img src="photo_2024-09-06 13.16.17.jpeg" alt="Dr. Kuanysh" width="100" height="100"></td>
+            <td><img src="photo_2024-09-06 13.16.17.jpeg" alt="Dr. Kuanysh" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
             <td>Dr. Kuanysh Aitzhanov </td>
             <td>Dermatologist</td>
             <td>kuan.ait@deunsauluq.com</td>
             <td>Tuesday, Thursday</td>
         </tr>
         <tr>
-            <td><img src="photo_2024-09-06 13.16.14.jpeg" alt="Dr. Gaziza" width="100" height="100"></td>
+            <td><img src="photo_2024-09-06 13.16.14.jpeg" alt="Dr. Gaziza" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
             <td>Dr. Gaziza Tanirbergen</td>
             <td>Neurologist</td>
             <td>gaziza.tan@densauluq.com</td>
