--- a/appointment.html
+++ b/appointment.html
@@ -37,7 +37,7 @@
     <option>Coronavirus</option>
     <option>Monkeypox</option>
     <option>SARS</option>
-    <option>Temperature above 38C</option>
+    <option>Fever</option>
     <option>Heart disease</option>
 </select>
 <br>
