--- a/diseases.html
+++ b/diseases.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
@@ -135,6 +135,63 @@
 </p>
     </article>
 </section>
+<section>
+    <article>
+<h3>Heart Disease</h3>
+
+<figure>
+    <img src="heart.jpg" alt="Heart Disease" width="250" height="250">
+    <figcaption>Illustration of heart disease</figcaption>
+</figure>
+
+<p>
+    Heart disease refers to a range of conditions that affect the heart, including coronary artery disease, heart rhythm problems (arrhythmias), and congenital heart defects. It is often caused by a combination of lifestyle factors, genetic predisposition, and other health conditions such as high blood pressure and diabetes.
+</p>
+
+<p>Common symptoms of heart disease include:</p>
+<ul>
+    <li>Chest pain or discomfort</li>
+    <li>Shortness of breath</li>
+    <li>Fatigue</li>
+    <li>Palpitations or irregular heartbeats</li>
+    <li>Dizziness or light-headedness</li>
+    <li>Swelling in the legs, ankles, or feet</li>
+</ul>
+
+<p>
+    Managing heart disease often involves lifestyle changes, medication, and sometimes surgical interventions to reduce symptoms and improve quality of life.
+</p>
+    </article>
+</section>
+
+<section>
+    <article>
+        <h3>Fever</h3>
+
+        <figure>
+            <img src="thumb.jpeg" alt="High Temperature" width="250" height="250">
+            <figcaption>Thermometer showing a high temperature</figcaption>
+        </figure>
+
+        <p>
+            A body temperature above 38°C (100.4°F) is generally considered a fever. Fevers are a common response of the body to infections and other illnesses. They can be caused by various factors including bacterial or viral infections, inflammatory conditions, and other medical issues.
+        </p>
+
+        <p>Common causes of a temperature above 38°C include:</p>
+        <ul>
+            <li>Infections such as the flu, cold, or COVID-19</li>
+            <li>Inflammatory diseases like rheumatoid arthritis</li>
+            <li>Heat exhaustion or heat stroke</li>
+            <li>Medication side effects or reactions</li>
+        </ul>
+
+        <p>
+            A fever itself is not usually dangerous, but it can be a sign of an underlying health issue. Persistent or very high fevers should be evaluated by a healthcare professional to determine the cause and appropriate treatment.
+        </p>
+
+    </article>
+</section>
+
   <footer>
       <p> 2024 Densuluq. Liana Smatulla. </p>
   </footer>
