funding added bugs fixed

--- a/doctors.html
+++ b/doctors.html
@@ -13,17 +13,16 @@
 
 <nav>
     <ul>
-        <li><a href="home_page.html">Return to home page</a></li>
-        <li><a href="registration.html">Log out</a></li>
+        <li><a href="registration.html">Log in/Sign up</a></li>
+        <li><a href="appointment.html">Make an Appointment</a></li>
+        <li><a href="analysis.html">Tests and Your Health</a></li>
         <li><a href="personal_account.html">Personal Account</a></li>
-        <li><a href="analysis.html">View test results</a></li>
-        <li><a href="diseases.html">About diseases</a></li>
-        <li><a href="doctors.html">Doctors' database</a></li>
-        <li><a href="recommend.html">General recommendations</a></li>
+        <li><a href="diseases.html">About Diseases</a></li>
+        <li><a href="doctors.html">Doctors' Database</a></li>
+        <li><a href="recommend.html">General Recommendations</a></li>
         <li><a href="funding.html">Financing</a></li>
     </ul>
 </nav>
-
 <section>
     <h2>Doctor Profiles</h2>
     <table border="1" cellpadding="10">
