--- a/diseases.html
+++ b/diseases.html
@@ -171,7 +171,7 @@
 
         <figure>
             <img src="thumb.jpeg" alt="High Temperature" width="250" height="250">
-            <figcaption>Thermometer showing a high temperature</figcaption>
+            <figcaption>High body temperature </figcaption>
         </figure>
 
         <p>
