--- a/analysis.html
+++ b/analysis.html
@@ -62,7 +62,7 @@
             </table>
 </section>
 <footer>
-    <p>2024 Densauluq. Gaziza Tanirbergen.</p>
+    <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 </body>
 </html>
