--- a/funding.html
+++ b/funding.html
@@ -79,7 +79,7 @@
     </form>
 </section>
 <footer>
-    <p> 2024 Densuluq. Liana Smatulla. </p>
+    <p> 2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov. </p>
 </footer>
 
 </body>
