--- a/recommend.html
+++ b/recommend.html
@@ -57,7 +57,7 @@
 </section>
 
 <footer>
-  <p>2024 Densauluq. Kuanysh Aitzhanov.</p>
+  <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 
 </body>
