--- a/registration.html
+++ b/registration.html
@@ -49,7 +49,7 @@
     <input type="submit" value="Registration">
 </form>
 <footer>
-    <p>2024 Densauluq. Gaziza Tanirbergen.</p>
+    <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 </body>
 </html>
