--- a/appointment.html
+++ b/appointment.html
@@ -68,7 +68,7 @@
 <br>
 </form>
 <footer>
-    <p>2024 Densauluq. Gaziza Tanirbergen.</p>
+    <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 </body>
 </html>
