--- a/diseases.html
+++ b/diseases.html
@@ -194,7 +194,7 @@
 </section>
 
   <footer>
-      <p> 2024 Densuluq. Liana Smatulla. </p>
+      <p> 2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov. </p>
   </footer>
 
   </body>
