--- a/doctors.html
+++ b/doctors.html
@@ -65,7 +65,7 @@
 
 
 <footer>
-    <p> 2024 Densuluq. Liana Smatulla. </p>
+    <p> 2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov. </p>
 </footer>
 
 </body>
