--- a/home_page.html
+++ b/home_page.html
@@ -70,7 +70,7 @@
 </section>
 
 <footer>
-    <p>2024 Densauluq. Kuanysh Aitzhanov.</p>
+    <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
 
 <hr>
