--- a/home_page.html
+++ b/home_page.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <link rel="stylesheet" href="home_page.css">
     <title>Densaulyq</title>
 </head>
 <body>
