--- a/appointment.html
+++ b/appointment.html
@@ -24,7 +24,7 @@
     </ul>
 </nav>
 <section>
-    <img src="коронавирус.png" alt="Коронавирус" height="200px" width="200px"><br>
+    <img src="img/коронавирус.png" alt="Коронавирус" height="200px" width="200px"><br>
     <figcaption>Illustration by Tanirbergen Gaziza</figcaption><br>
     <br>
     <h3>Discounts for coronavirus diagnostics.</h3><br>
