--- a/diseases.html
+++ b/diseases.html
@@ -35,7 +35,7 @@
           <h3>Severe Acute Respiratory Syndrome (SARS)</h3>
 
           <figure>
-              <img src="sars virus.jpg" alt="SARS Virus" width="250" height="250">
+              <img src="img/sars%20virus.jpg" alt="SARS Virus" width="250" height="250">
               <figcaption>SARS virus under the microscope</figcaption>
           </figure>
 
@@ -64,7 +64,7 @@
         <h3>Monkeypox</h3>
 
         <figure>
-            <img src="monkeypox.jpg" alt="Monkeypox Virus" width="250" height="250">
+            <img src="img/monkeypox.jpg" alt="Monkeypox Virus" width="250" height="250">
             <figcaption>Monkeypox virus under the microscope</figcaption>
         </figure>
 
@@ -94,7 +94,7 @@
 <h3>Coronavirus (COVID-19)</h3>
 
 <figure>
-    <img src="coronavirus.jpg" alt="Coronavirus" width="250" height="250">
+    <img src="img/coronavirus.jpg" alt="Coronavirus" width="250" height="250">
     <figcaption>Coronavirus under the microscope</figcaption>
 </figure>
 
@@ -156,7 +156,7 @@
         <h3>Fever</h3>
 
         <figure>
-            <img src="thumb.jpeg" alt="High Temperature" width="250" height="250">
+            <img src="img/thumb.jpeg" alt="High Temperature" width="250" height="250">
             <figcaption>High body temperature </figcaption>
         </figure>
 
