--- a/recommend.html
+++ b/recommend.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
   <title>General Recommendations - Densauluq</title>
 </head>
 <body>
