--- a/personal_account.html
+++ b/personal_account.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initialscale=1.0">
+  <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
   <title>Personal Account - Densauluq</title>
 </head>
 <body>
