account flex box

--- a/personal_account.html
+++ b/personal_account.html
@@ -29,15 +29,17 @@
 
 <section>
   <h2>Your Information</h2>
-  <p><strong>Name:</strong>Kuanysh</p>
-  <p><strong>Surname:</strong>Aitzhanov</p>
-  <p><strong>IIN:</strong>22222222222222</p>
-  <p><strong>Gender:</strong>Male</p>
-  <p><strong>Place of Residence:</strong>Pushkin st. 12</p>
-  <p><strong>Hospital Registration:</strong>Mediker</p>
-  <p><strong>Date of Birth:</strong> 22.12.2005</p>
-  <p><strong>Email:</strong> kuka@gmail.com</p>
-  <p><strong>Phone:</strong> +7 (777) 789 7890</p>
+  <div class="your-information">
+    <p><strong>Name:</strong>Kuanysh</p>
+    <p><strong>Surname:</strong>Aitzhanov</p>
+    <p><strong>IIN:</strong>22222222222222</p>
+    <p><strong>Gender:</strong>Male</p>
+    <p><strong>Place of Residence:</strong>Pushkin st. 12</p>
+    <p><strong>Hospital Registration:</strong>Mediker</p>
+    <p><strong>Date of Birth:</strong> 22.12.2005</p>
+    <p><strong>Email:</strong> kuka@gmail.com</p>
+    <p><strong>Phone:</strong> +7 (777) 789 7890</p>
+  </div>
 </section>
 
 <section>
