--- a/personal_account.html
+++ b/personal_account.html
@@ -11,7 +11,7 @@
 <header>
   <h1>Personal Account</h1>
   <h2>Welcome, Kuanysh</h2>
-  <p>Manage your personal information, appointments, and more.</p>
+  <p class="description">Manage your personal information, appointments, and more.</p>
 </header>
 
 <nav>
@@ -51,7 +51,7 @@
 <section>
   <h2>Your Test Results</h2>
   <p>No test results available.</p>
-  <p><a href="health_analysis.html">View more details</a></p>
+  <p><a href="analysis.html">View more details</a></p>
 </section>
 
 <section>
