--- a/recommend.html
+++ b/recommend.html
@@ -11,7 +11,7 @@
 <header>
   <h1>General Recommendations</h1>
   <h2>Your Health Matters</h2>
-  <p>Follow these guidelines to maintain a healthy lifestyle.</p>
+  <p class="description">Follow these guidelines to maintain a healthy lifestyle.</p>
 </header>
 
 <nav>
