--- a/registration.html
+++ b/registration.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
+    <link rel="stylesheet" href="GazizaDesign.css">
     <title>Log in/Sign in - Densauluq</title>
 </head>
 <body>
@@ -20,14 +23,17 @@
         <li><a href="funding.html">Financing</a></li>
     </ul>
 </nav>
-<h1>Already in? Log in!</h1>
-<form action="personal_account.html" method="get">
-    <label>email</label><br>
-    <input type="email"><br>
-    <label>password</label><br>
-    <input type="password"><br><br>
-    <input type="submit" value="Log in">
-</form>
+
+<fieldset class="registration">
+    <legend><h1>Already in? Log in!</h1></legend>
+    <form action="personal_account.html" method="get">
+        <label>email</label><br>
+        <input type="email"><br>
+        <label>password</label><br>
+        <input type="password"><br><br>
+        <input type="submit" value="Log in">
+    </form>
+</fieldset>
 
 <h1>First time? THEN SIGN IN</h1>
 <form action="personal_account.html" method="get">
