--- a/analysis.html
+++ b/analysis.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <title>Health analysis - Densauluq</title>
 </head>
 <body>
