--- a/doctors.html
+++ b/doctors.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
+    <meta name="viewport" content="width=device-width, initialscale=1.0">
     <title>Densauluq</title>
 </head>
 
