--- a/diseases.html
+++ b/diseases.html
@@ -129,7 +129,7 @@
 <h3>Heart Disease</h3>
 
 <figure>
-    <img src="heart.jpg" alt="Heart Disease" width="250" height="250">
+    <img src="img/heart.jpg" alt="Heart Disease" width="250" height="250">
     <figcaption>Illustration of heart disease</figcaption>
 </figure>
 
