--- a/registration.html
+++ b/registration.html
@@ -23,7 +23,6 @@
         <li><a href="funding.html">Financing</a></li>
     </ul>
 </nav>
-
 <fieldset class="registration">
     <legend><h1>Already in? Log in!</h1></legend>
     <form action="personal_account.html" method="get">
@@ -34,26 +33,28 @@
         <input type="submit" value="Log in">
     </form>
 </fieldset>
-
-<h1>First time? THEN SIGN IN</h1>
-<form action="personal_account.html" method="get">
-    <label>First name:</label><br>
-    <input type="text"><br>
-    <br>
-    <label>Last name:</label><br>
-    <input type="text"><br><br>
-    <label>E-mail:</label><br>
-    <input type="email"><br>
-    <br>
-    <label>Date of birth:</label><br>
-    <input type="date"><br>
-    <br>
-    <label>Password:</label><br>
-    <input type="password"><br><br>
-    <label>Approve password:</label><br>
-    <input type="password"><br><br>
-    <input type="submit" value="Registration">
-</form>
+<br>
+<br>
+<fieldset class="registration">
+    <legend><h1>First time? THEN SIGN IN</h1></legend>
+    <form action="personal_account.html" method="get">
+        <label>First name:</label><br>
+        <input type="text"><br>
+        <label>Last name:</label><br>
+        <input type="text"><br>
+        <label>E-mail:</label><br>
+        <input type="email"><br>
+        <br>
+        <label>Date of birth:</label><br>
+        <input type="date"><br>
+        <br>
+        <label>Password:</label><br>
+        <input type="password"><br><br>
+        <label>Approve password:</label><br>
+        <input type="password"><br><br>
+        <input type="submit" value="Registration">
+    </form>
+</fieldset>
 <footer>
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
