--- a/registration.html
+++ b/registration.html
@@ -36,7 +36,7 @@
 <br>
 <br>
 <fieldset class="registration">
-    <legend><h1>First time? THEN SIGN IN</h1></legend>
+    <legend font-size = "50px"; padding = "10px"; font-family = "Arial"; font-size>First time? THEN SIGN IN</legend>
     <form action="personal_account.html" method="get">
         <label>First name:</label><br>
         <input type="text"><br>
@@ -55,6 +55,9 @@
         <input type="submit" value="Registration">
     </form>
 </fieldset>
+<br>
+<br>
+<br>
 <footer>
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
