--- a/appointment.html
+++ b/appointment.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
+    <link rel="stylesheet" href="GazizaDesign.css">
     <title>Appointment - Densaulyq</title>
 </head>
 <body>
@@ -25,50 +26,52 @@
         <li><a href="funding.html">Financing</a></li>
     </ul>
 </nav>
-<section>
-    <img src="img/коронавирус.png" alt="Коронавирус" height="200px" width="200px"><br>
-    <figcaption>Illustration by Tanirbergen Gaziza</figcaption><br>
-    <br>
-    <h3>Discounts for coronavirus diagnostics.</h3><br>
-    <br>
-    <br>
+<fieldset class="registration">
     <form action="personal_account.html" method="get">
-</section>
-<h1>Choose the illness.</h1><br>
-<select>
-    <option>Coronavirus</option>
-    <option>Monkeypox</option>
-    <option>SARS</option>
-    <option>Fever</option>
-    <option>Heart disease</option>
-</select>
-<br>
-<br>
-<a>Choose the doctor.</a><br>
-<select>
-    <option>Sembayev N.</option>
-    <option>Tanirbegren G.</option>
-    <option>Aitzhanov K.</option>
-    <option>Smatulla L.</option>
-</select>
-<br>
-<br>
-<a>Reason of the visit.</a><br>
-<textarea></textarea><br>
-<br>
-<br>
-<a>Choose the date.</a><br>
-<input type="date"><br>
-<br>
-<br>
-<a>Choose the time.</a><br>
-<input type="time"><br>
-<br>
-<br>
-<input type="submit" value="Register">
-<br>
-<br>
-</form>
+        <section>
+            <img src="img/коронавирус.png" alt="Коронавирус" height="200px" width="200px"><br>
+            <figcaption>Illustration by Tanirbergen Gaziza</figcaption><br>
+            <br>
+            <h3>Discounts for coronavirus diagnostics.</h3><br>
+            <br>
+            <br>
+        </section>
+        <h1>Choose the illness.</h1><br>
+        <select>
+            <option>Coronavirus</option>
+            <option>Monkeypox</option>
+            <option>SARS</option>
+            <option>Fever</option>
+            <option>Heart disease</option>
+        </select>
+        <br>
+        <br>
+        <a>Choose the doctor.</a><br>
+        <select>
+            <option>Sembayev N.</option>
+            <option>Tanirbegren G.</option>
+            <option>Aitzhanov K.</option>
+            <option>Smatulla L.</option>
+        </select>
+        <br>
+        <br>
+        <a>Reason of the visit.</a><br>
+        <textarea></textarea><br>
+        <br>
+        <br>
+        <a>Choose the date.</a><br>
+        <input type="date"><br>
+        <br>
+        <br>
+        <a>Choose the time.</a><br>
+        <input type="time"><br>
+        <br>
+        <br>
+        <input type="submit" value="Register">
+        <br>
+        <br>
+    </form>
+</fieldset>
 <footer>
     <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
