--- a/analysis.html
+++ b/analysis.html
@@ -46,7 +46,7 @@
 <br>
 <br>
 <section class="analysis">
-            <table id="tabliza">
+            <table id="table-design">
                 <thead>
                 <tr>
                     <th>Date</th>
