--- a/doctors.html
+++ b/doctors.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
+    <link rel="stylesheet" href="Liana_style.css">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <title>Densauluq</title>
 </head>
 
 <body>
-
+ <header>
 <h1>Our specialists</h1>
 <p>We are pleased to introduce you to our team of medical specialists!</p>
+ </header>
 
 <nav>
     <ul>
-        <li><a href="registration.html">Log in/Sign up</a></li>
+        <li><a href="home_page.html">Return to home page</a></li>
         <li><a href="appointment.html">Make an Appointment</a></li>
         <li><a href="analysis.html">Tests and Your Health</a></li>
         <li><a href="personal_account.html">Personal Account</a></li>
@@ -26,7 +28,6 @@
     </ul>
 </nav>
 <section>
-    <h2>Doctor Profiles</h2>
     <table border="1" cellpadding="10">
         <thead>
         <tr>
@@ -39,7 +40,8 @@
         </thead>
         <tbody>
         <tr>
-            <td><img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Liana" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
+            <td>
+                <a href="appointment.html"> <img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Liana" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
             <td>Dr. Liana Smatulla</td>
             <td>Cardiologist</td>
             <td>liana.smat@densauluq.com</td>
