--- a/diseases.html
+++ b/diseases.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
+    <link rel="stylesheet" href="Liana_style.css">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <title>Densauluq</title>
 </head>
@@ -14,7 +15,7 @@
     <p>On this page you can read about common diseases and learn their symptoms.</p>
 
 
-      </head>
+
   </header>
 
   <nav>
@@ -31,7 +32,6 @@
   </nav>
 
   <section>
-      <h2>Diseases</h2>
 
       <article>
           <h3>Severe Acute Respiratory Syndrome (SARS)</h3>
