--- a/doctors.html
+++ b/doctors.html
@@ -48,14 +48,16 @@
             <td>Monday, Wednesday, Friday</td>
         </tr>
         <tr>
-            <td><img src="img/photo_2024-09-06%2013.16.17.jpeg" alt="Dr. Kuanysh" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
+            <td> <a href="appointment.html">
+                <img src="img/photo_2024-09-06%2013.16.17.jpeg" alt="Dr. Kuanysh" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
             <td>Dr. Kuanysh Aitzhanov </td>
             <td>Dermatologist</td>
             <td>kuan.ait@deunsauluq.com</td>
             <td>Tuesday, Thursday</td>
         </tr>
         <tr>
-            <td><img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Gaziza" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
+            <td> <a href="appointment.html">
+                <img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Gaziza" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
             <td>Dr. Gaziza Tanirbergen</td>
             <td>Neurologist</td>
             <td>gaziza.tan@densauluq.com</td>
