--- a/analysis.html
+++ b/analysis.html
@@ -47,7 +47,7 @@
 <br>
 <section class="analysis">
             <table id="table-design">
-                <thead>
+                <thead id="thead-design-analysis">
                 <tr>
                     <th>Date</th>
                     <th>Analysis name</th>
