--- a/registration.html
+++ b/registration.html
@@ -37,7 +37,7 @@
 <img src="img/таблетка для анимации.png" class="image-animation">
 <br>
 <fieldset class="registration">
-    <legend font-size = "50px"; padding = "10px"; font-family = "Arial"; font-size>First time? THEN SIGN IN</legend>
+    <legend font-size = "50px"; padding = "10px"; font-family = "Arial"; font-size><h1>First time? THEN SIGN IN</h1></legend>
     <form action="personal_account.html" method="get">
         <label>First name:</label><br>
         <input type="text"><br>
