idk just changes + etc

--- a/doctors.html
+++ b/doctors.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,14 +11,14 @@
 </head>
 
 <body>
- <header>
-<h1>Our specialists</h1>
-<p>We are pleased to introduce you to our team of medical specialists!</p>
- </header>
+<header>
+    <h1>Our Specialists</h1>
+    <p>We are pleased to introduce you to our team of medical specialists!</p>
+</header>
 
 <nav>
     <ul>
-        <li><a href="home_page.html">Return to home page</a></li>
+        <li><a href="home_page.html">Return to Home Page</a></li>
         <li><a href="appointment.html">Make an Appointment</a></li>
         <li><a href="analysis.html">Tests and Your Health</a></li>
         <li><a href="personal_account.html">Personal Account</a></li>
@@ -27,8 +28,9 @@
         <li><a href="funding.html">Financing</a></li>
     </ul>
 </nav>
+
 <section>
-    <table border="1" cellpadding="10">
+    <table>
         <thead>
         <tr>
             <th>Photo</th>
@@ -41,23 +43,32 @@
         <tbody>
         <tr>
             <td>
-                <a href="appointment.html"> <img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Liana" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
+                <img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Liana">
+                <figcaption>Doctor's image</figcaption>
+                <a href="appointment.html">Make an appointment</a>
+            </td>
             <td>Dr. Liana Smatulla</td>
             <td>Cardiologist</td>
             <td>liana.smat@densauluq.com</td>
             <td>Monday, Wednesday, Friday</td>
         </tr>
         <tr>
-            <td> <a href="appointment.html">
-                <img src="img/photo_2024-09-06%2013.16.17.jpeg" alt="Dr. Kuanysh" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
-            <td>Dr. Kuanysh Aitzhanov </td>
+            <td>
+                <img src="img/photo_2024-09-06%2013.16.17.jpeg" alt="Dr. Kuanysh">
+                <figcaption>Doctor's image</figcaption>
+                <a href="appointment.html">Make an appointment</a>
+            </td>
+            <td>Dr. Kuanysh Aitzhanov</td>
             <td>Dermatologist</td>
             <td>kuan.ait@deunsauluq.com</td>
             <td>Tuesday, Thursday</td>
         </tr>
         <tr>
-            <td> <a href="appointment.html">
-                <img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Gaziza" width="100" height="100"> <figcaption> Doctor's image </figcaption></td>
+            <td>
+                <img src="img/photo_2024-09-06%2013.16.14.jpeg" alt="Dr. Gaziza" =>
+                <figcaption>Doctor's image</figcaption>
+                <a href="appointment.html"> Make an appointment </a>
+            </td>
             <td>Dr. Gaziza Tanirbergen</td>
             <td>Neurologist</td>
             <td>gaziza.tan@densauluq.com</td>
@@ -67,12 +78,8 @@
     </table>
 </section>
 
-
-
-
 <footer>
-    <p> 2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov. </p>
+    <p>2024 Densauluq. Gaziza Tanirbergen, Liana Smatulla, Kuanysh Aitzhanov.</p>
 </footer>
-
 </body>
 </html>
