--- a/appointment.html
+++ b/appointment.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
     <link rel="stylesheet" href="GazizaDesign.css">
+    <link rel="stylesheet" href="Liana_style.css">
     <title>Appointment - Densaulyq</title>
 </head>
 <body>
