--- a/funding.html
+++ b/funding.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <link rel="stylesheet" href="Kuanysh_Aitzhanov_style.css">
+    <link rel="stylesheet" href="Liana_style.css">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <title>Densauluq</title>
 </head>
@@ -38,12 +39,13 @@
         </select>
         <br><br>
 
-        <input type="submit" value="Next">
+<!--        <input type="submit" value="Next">-->
+        <a href="appointment.html">Next</a>
     </form>
 </section>
 
 <section>
-    <h3>Available Discounts</h3>
+    <h2>Available Discounts</h2>
     <ul>
         <li><strong>People with disabilities:</strong> Receive free medical consultations and discounted treatments.</li>
         <li><strong>Senior citizens:</strong> Receive discounts on selected services and priority appointment scheduling.</li>
@@ -57,11 +59,11 @@
             <legend>Credit Card Details</legend>
 
             <label for="card-number">Card Number:</label>
-            <input type="text" id="card-number" name="card-number" required>
+            <input type="text" id="card-number" name="card-number" placeholder="0000 0000 0000 0000" required>
             <br><br>
 
             <label for="card-name">Cardholder Name:</label>
-            <input type="text" id="card-name" name="card-name" required>
+            <input type="text" id="card-name" name="card-name" placeholder="John Wick" required>
             <br><br>
 
             <label for="expiry-date">Expiry Date:</label>
@@ -69,11 +71,11 @@
             <br><br>
 
             <label for="cvv">CVV:</label>
-            <input type="text" id="cvv" name="cvv" required>
+            <input type="text" id="cvv" name="cvv" placeholder="***" required>
             <br><br>
 
             <label for="billing-address">Billing Address:</label>
-            <input type="text" id="billing-address" name="billing-address" required>
+            <input type="text" id="billing-address" name="billing-address" placeholder="Some Street 123" required>
             <br><br>
 
             <input type="submit" value="Submit Payment">
