--- a/funding.html
+++ b/funding.html
@@ -58,11 +58,11 @@
             <legend>Credit Card Details</legend>
 
             <label for="card-number">Card Number:</label>
-            <input type="text" id="card-number" name="card-number" required>
+            <input type="text" id="card-number" name="card-number" placeholder="0000 0000 0000 0000" required>
             <br><br>
 
             <label for="card-name">Cardholder Name:</label>
-            <input type="text" id="card-name" name="card-name" required>
+            <input type="text" id="card-name" name="card-name" placeholder="John Wick"required>
             <br><br>
 
             <label for="expiry-date">Expiry Date:</label>
@@ -70,11 +70,11 @@
             <br><br>
 
             <label for="cvv">CVV:</label>
-            <input type="text" id="cvv" name="cvv" required>
+            <input type="text" id="cvv" name="cvv" placeholder="***"required>
             <br><br>
 
             <label for="billing-address">Billing Address:</label>
-            <input type="text" id="billing-address" name="billing-address" required>
+            <input type="text" id="billing-address" name="billing-address" placeholder="Tokyo, Some Street 123"required>
             <br><br>
 
             <input type="submit" value="Submit Payment">
