animation check this out

--- a/appointment.html
+++ b/appointment.html
@@ -30,7 +30,7 @@
 <fieldset class="registration">
     <form action="personal_account.html" method="get">
         <section>
-            <img src="img/коронавирус.png" alt="Коронавирус" height="200px" width="200px"><br>
+            <img src="img/covid.png" alt="Коронавирус" height="200px" width="200px"><br>
             <figcaption>Illustration by Tanirbergen Gaziza</figcaption><br>
             <br>
             <h3>Discounts for coronavirus diagnostics.</h3><br>
