--- a/home_page.html
+++ b/home_page.html
@@ -9,8 +9,8 @@
 <body>
 
 <header>
-    <img src="img/logo.png" alt="Densauluq Logo" style="height: 80px; width: auto;">
-    <img src="img/img.png" alt="Densauluq Name" style="height: 50px; width: auto;">
+    <img src="img/logo.png" alt="Densauluq Logo" style="height: 80px; width: auto;" class="img">
+    <img src="img/imgbg.png" alt="Densauluq Name" style="height: 60px; width: auto;" class="img">
     <hr>
     <h1>Medical Organization in Kazakhstan</h1>
     <p>Providing high-quality healthcare services for the people of Kazakhstan.</p>
