--- a/registration.html
+++ b/registration.html
@@ -34,7 +34,7 @@
     </form>
 </fieldset>
 <br>
-<img src="img/таблетка для анимации.png" class="image-animation">
+<img src="img/redblue.png" class="image-animation">
 <br>
 <fieldset class="registration">
     <legend font-size = "50px"; padding = "10px"; font-family = "Arial"; font-size><h1>First time? THEN SIGN IN</h1></legend>
